--- a/Front-End/Image-Converter/package.json
+++ b/Front-End/Image-Converter/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "bootstrap": "^5.1.3",
     "html2canvas": "^1.4.1",
     "jquery": "^3.6.0",
     "rxjs": "~7.5.0",
