--- a/Front-End/Image-Converter/package.json
+++ b/Front-End/Image-Converter/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~13.3.0",
     "html2canvas": "^1.4.1",
     "jquery": "^3.6.0",
+    "ngx-opencv": "^2.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
