--- a/.github/workflows/angular.yml
+++ b/.github/workflows/angular.yml
@@ -4,19 +4,13 @@ on: [push]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [12.x, 14.x, 16.x]
-
     steps:
     - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js 16
       uses: actions/setup-node@v3
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: '16'
         cache: 'npm'
     - run: npm ci --prefix  Front-End/Image-Converter/
     - run: npm fund --prefix  Front-End/Image-Converter/
