:green_heart: (CI/CD) back-end workflow try no 3

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
-
 Server/__pycache__/app.cpython-310.pyc
 Server/.env
 *.pyc
+.idea
+.pytest_cache
+Server/.pytest_cache
+Server/.tox
+Server/.coverage
