:green_heart: (CI/CD) add coverage for back-end workflows try no 2

--- a/.github/workflows/pythonTests.yml
+++ b/.github/workflows/pythonTests.yml
@@ -21,4 +21,4 @@ jobs:
         run: |
           pip install pytest
           export PYTHONPATH=Server/
-          pytest --cov
+          python -m pytest --cov
