--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ Server/.coverage
 *.pyc
 Server/test/__pycache__/test_routes.cpython-310-pytest-7.1.2.pyc
 Server/database/firebaseKey.json
+Server/database/__pycache__/database.cpython-310.pyc
