--- a/Front-End/Image-Converter/package.json
+++ b/Front-End/Image-Converter/package.json
@@ -20,7 +20,8 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.2.0",
+    "chart.js": "^3.8.2",
     "html2canvas": "^1.4.1",
     "jquery": "^3.6.0",
     "ngx-opencv": "^2.0.1",
