--- a/Server/requirements.txt
+++ b/Server/requirements.txt
@@ -48,7 +48,7 @@ platformdirs==2.5.2
 pluggy==1.0.0
 proto-plus==1.20.6
 protobuf==3.20.1
-# psycopg2==2.9.3
+psycopg2==2.9.3
 py==1.11.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
@@ -56,6 +56,7 @@ pycparser==2.21
 PyJWT==2.4.0
 pyparsing==3.0.9
 pytest==7.1.2
+pytest-cov==3.0.0
 python-dateutil==2.8.2
 python-dotenv==0.20.0
 python-http-client==3.3.7
