--- a/Server/requirements.txt
+++ b/Server/requirements.txt
@@ -50,9 +50,7 @@ Pillow==9.1.1
 platformdirs==2.5.2
 pluggy==1.0.0
 proto-plus==1.20.6
-
-protobuf==3.20.1
-
+protobuf>=3.9.2
 psycopg2==2.9.3
 py==1.11.0
 pyasn1==0.4.8
