--- a/Front-End/Image-Converter/angular.json
+++ b/Front-End/Image-Converter/angular.json
@@ -31,8 +31,9 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
+             
               "node_modules/bootstrap/scss/bootstrap.scss",
+              "src/theme.scss",
               "src/styles.scss"
             ],
             "scripts": [
