--- a/Front-End/Image-Converter/angular.json
+++ b/Front-End/Image-Converter/angular.json
@@ -38,7 +38,8 @@
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
-              "src/assets/js/custom.js"
+              "src/assets/js/custom.js",
+              "src/assets/js/calculator.js"
             ]
           },
           "configurations": {
