--- a/Front-End/Image-Converter/package.json
+++ b/Front-End/Image-Converter/package.json
@@ -23,19 +23,21 @@
     "@angular/router": "~13.3.0",
     "bootstrap": "^5.2.0",
     "chart.js": "^3.8.2",
+    "desmos": "^1.5.4",
     "html2canvas": "^1.4.1",
     "jquery": "^3.6.0",
     "ngx-opencv": "^2.0.1",
+    "puppeteer": "^14.3.0",
     "rxjs": "~7.5.0",
     "socket.io": "^4.5.1",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
-    "puppeteer": "^14.3.0"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.2",
     "@angular/cli": "~13.3.2",
     "@angular/compiler-cli": "~13.3.0",
+    "@types/desmos": "^1.6.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
