--- a/Front-End/Image-Converter/package.json
+++ b/Front-End/Image-Converter/package.json
@@ -26,6 +26,7 @@
     "desmos": "^1.5.4",
     "html2canvas": "^1.4.1",
     "jquery": "^3.6.0",
+    "ngx-capture": "^0.12.2",
     "ngx-opencv": "^2.0.1",
     "puppeteer": "^14.3.0",
     "rxjs": "~7.5.0",
