--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ Server/.coverage
 Server/test/__pycache__/test_routes.cpython-310-pytest-7.1.2.pyc
 Server/database/firebaseKey.json
 Server/database/__pycache__/database.cpython-310.pyc
+*/node_modules
