--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ Server/database/__pycache__/database.cpython-310.pyc
 */node_modules
 node_modules
 Server/venv/
+Server/database/__pycache__/database.cpython-310.pyc
