--- a/.gitignore
+++ b/.gitignore
@@ -15,5 +15,5 @@ Server/database/firebaseKey.json
 Server/database/__pycache__/database.cpython-310.pyc
 */node_modules
 node_modules
-Server/venv/
+Server/venv
 Server/database/__pycache__/database.cpython-310.pyc
