--- a/Front-End/Image-Converter/angular.json
+++ b/Front-End/Image-Converter/angular.json
@@ -34,12 +34,18 @@
              
               "node_modules/bootstrap/scss/bootstrap.scss",
               "src/theme.scss",
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/glightbox/src/postcss/glightbox.min.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
               "src/assets/js/custom.js",
-              "src/assets/js/calculator.js"
+              "src/assets/js/calculator.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+              "node_modules/glightbox/src/js/glightbox.min.js"
+              
             ]
           },
           "configurations": {
