--- a/Front-End/Image-Converter/package.json
+++ b/Front-End/Image-Converter/package.json
@@ -21,16 +21,21 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
-    "bootstrap": "^5.2.0",
+    "aos": "^2.3.4",
+    "bootstrap": "^5.2.1",
+    "bootstrap-icons": "^1.9.1",
     "chart.js": "^3.8.2",
     "desmos": "^1.5.4",
+    "glightbox": "^3.2.0",
     "html2canvas": "^1.4.1",
     "jquery": "^3.6.0",
     "ngx-capture": "^0.12.2",
     "ngx-opencv": "^2.0.1",
     "puppeteer": "^14.3.0",
+    "remixicon": "^2.5.0",
     "rxjs": "~7.5.0",
     "socket.io": "^4.5.1",
+    "swiper": "^8.4.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
