--- a/Front-End/Image-Converter/angular.json
+++ b/Front-End/Image-Converter/angular.json
@@ -37,7 +37,7 @@
               "src/styles.scss",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/glightbox/src/postcss/glightbox.min.css",
-              "node_modules/swiper/swiper-bundle.min.js.map",
+              "node_modules/swiper/swiper-bundle.min.css",
               "node_modules/aos/dist/aos.css",
               "node_modules/remixicon/fonts/remixicon.css"
             ],
@@ -48,7 +48,7 @@
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
               "node_modules/glightbox/src/js/glightbox.min.js",
-              "node_modules/swiper/swiper-bundle.min.css",
+              "node_modules/swiper/swiper-bundle.min.js",
               "node_modules/aos/dist/aos.js",
               "src/assets/js/main.js"
               
