--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,7 @@ Server/database/__pycache__/database.cpython-310.pyc
 node_modules
 Server/venv/
 .DS_Store
+Server/converter/imageSmoothing/graphs/
+Server/graphs
+Server/converter/imageSmoothing/hr_images/
+Server/converter/imageSmoothing/lr_images/
