--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ node_modules
 Server/venv/
 Server/database/__pycache__/database.cpython-310.pyc
 Server/Multi_Class_Model/variables/variables.data-00000-of-00001
+*.png
+*.jpg
