--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ Server/converter/imageSmoothing/graphs/
 Server/graphs
 Server/converter/imageSmoothing/hr_images/
 Server/converter/imageSmoothing/lr_images/
+Server/Multi_Class_Model/variables/variables.data-00000-of-00001
