--- a/.github/workflows/pythonTests.yml
+++ b/.github/workflows/pythonTests.yml
@@ -18,6 +18,8 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r Server/requirements.txt
       - name: Test with pytest
+        env:
+          TYPE: ${{ secrets.TYPE }}
         run: |
           pip install pytest
           export PYTHONPATH=Server/
