--- a/.github/workflows/angular.yml
+++ b/.github/workflows/angular.yml
@@ -14,7 +14,9 @@ jobs:
         cache: 'npm'
     - run: npm ci --prefix  Front-End/Image-Converter/
     - run: npm fund --prefix  Front-End/Image-Converter/
-    - run: mv Front-End/Image-Converter/src/assets/glightbox.js Front-End/Image-Converter/node_modules/glightbox/src/js
-    - run: mv Front-End/Image-Converter/src/assets/glightbox.css Front-End/Image-Converter/node_modules/glightbox/src/postcss
+    - bash: |
+      echo $(pwd)
+    # - run: mv src/assets/glightbox.js node_modules/glightbox/src/js
+    # - run: mv src/assets/glightbox.css node_modules/glightbox/src/postcss
     - run: npm run build --if-present --prefix  Front-End/Image-Converter/
     - run: npm test --prefix  Front-End/Image-Converter/
