--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ Server/database/__pycache__/database.cpython-310.pyc
 Server/Multi_Class_Model/variables/variables.data-00000-of-00001
 *.png
 *.jpg
+Server/model/variables/variables.data-00000-of-00001
