--- a/Front-End/Image-Converter/package.json
+++ b/Front-End/Image-Converter/package.json
@@ -26,6 +26,7 @@
     "bootstrap-icons": "^1.9.1",
     "chart.js": "^3.8.2",
     "desmos": "^1.5.4",
+    "express": "^4.18.2",
     "glightbox": "^3.2.0",
     "html2canvas": "^1.4.1",
     "jquery": "^3.6.0",
@@ -35,6 +36,7 @@
     "remixicon": "^2.5.0",
     "rxjs": "~7.5.0",
     "socket.io": "^4.5.1",
+    "socket.io-client": "^4.5.2",
     "swiper": "^8.4.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
