--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ Server/Multi_Class_Model/variables/variables.data-00000-of-00001
 Server/model/variables/variables.data-00000-of-00001
 Server/database/__pycache__/database.cpython-310.pyc
 Server/database/__pycache__/database.cpython-310.pyc
+*.DS_Store
