--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ Server/model/keras_metadata.pb
 Server/model/saved_model.pb
 Server/model/saved_model.pb
 Server/model/keras_metadata.pb
+Server/Multi_Class_Model/keras_metadata.pb
