--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ node_modules
 Server/venv/
 Server/database/__pycache__/database.cpython-310.pyc
 Server/Multi_Class_Model/variables/variables.data-00000-of-00001
+*.png
 *.jpg
 Server/model/variables/variables.data-00000-of-00001
 Server/database/__pycache__/database.cpython-310.pyc
