--- a/Front-End/Image-Converter/package.json
+++ b/Front-End/Image-Converter/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@material/chips": "^14.0.0",
     "@types/socket.io-client": "^3.0.0",
     "aos": "^2.3.4",
     "bootstrap": "^5.2.1",
